--- a/merchant/tablet-ionic/src/pages/+carriers/carrier-track-popup/carrier-track-popup.html
+++ b/merchant/tablet-ionic/src/pages/+carriers/carrier-track-popup/carrier-track-popup.html
@@ -8,7 +8,8 @@
 			<img [src]="carrierIcon" />
 			<h4>Carrier</h4>
 		</div>
-		<h3>{{ carrier.fullName }} <small>@{{ carrier.username }} </small></h3>
+		<h3>{{ carrier.fullName }}</h3>
+		<small>@{{ carrier.username }} </small>
 		<li><i class="fa fa-phone"></i> {{ carrier.phone}}</li>
 		<li>
 			<i class="fa fa-map-pin"></i> {{ carrier.geoLocation.streetAddress
