feat: added Spanish translates to the shop web, merchant, carrier app

--- a/carrier/mobile-ionic/src/pages/language/language.html
+++ b/carrier/mobile-ionic/src/pages/language/language.html
@@ -37,6 +37,10 @@
 				<ion-label>{{ 'LANGUAGE_VIEW.RUSSIAN' | translate }}</ion-label>
 				<ion-radio value="ru-RU"></ion-radio>
 			</ion-item>
+			<ion-item>
+				<ion-label>{{ 'LANGUAGE_VIEW.SPANISH' | translate }}</ion-label>
+				<ion-radio value="es-ES"></ion-radio>
+			</ion-item>
 		</ion-radio-group>
 	</div>
 </ion-content>
