feat: added Spanish language to product mutation Merchant-app #1024

--- a/merchant/tablet-ionic/src/pages/+warehouse/edit-product-type-popup/edit-product-type-popup.html
+++ b/merchant/tablet-ionic/src/pages/+warehouse/edit-product-type-popup/edit-product-type-popup.html
@@ -121,6 +121,10 @@
 									>{{ 'EDIT_PRODUCT_POP_UP.BULGARIAN' |
 									translate }}</option
 								>
+								<option value="es-ES"
+									>{{ 'EDIT_PRODUCT_POP_UP.SPANISH' |
+									translate }}</option
+								>
 							</select>
 						</label>
 					</div>
