feat: done for cases before take the order

--- a/carrier/mobile-ionic/src/pages/main/drive-to-warehouse/drive-to-warehouse.html
+++ b/carrier/mobile-ionic/src/pages/main/drive-to-warehouse/drive-to-warehouse.html
@@ -7,7 +7,11 @@
 	</div>
 	<div class="buttons">
 		<div class="button-bar" *ngIf="!workTaken">
-			<button class="button button-brand" (click)="takeWork()">
+			<button
+				*ngIf="!selectedOrder?.isCancelled"
+				class="button button-brand"
+				(click)="takeWork()"
+			>
 				{{ 'DRIVE_TO_WAREHOUSE_VIEW.TAKE_WORK' | translate }}
 			</button>
 
@@ -16,13 +20,17 @@
 			</button>
 		</div>
 		<div class="button-bar" *ngIf="workTaken">
-			<button class="button button-brand" (click)="carrierInWarehouse()">
+			<button
+				*ngIf="!selectedOrder?.isCancelled || store.driveToWarehouseFrom === 'delivery'"
+				class="button button-brand"
+				(click)="carrierInWarehouse()"
+			>
 				{{ "DRIVE_TO_WAREHOUSE_VIEW.I'M_THERE" | translate }}
 			</button>
 
 			<button
 				class="button button-assertive"
-				*ngIf="!selectedOrder.isCancelled"
+				*ngIf="store.driveToWarehouseFrom !== 'delivery'"
 				(click)="cancelWork()"
 			>
 				{{ 'DRIVE_TO_WAREHOUSE_VIEW.CANCEL' | translate }}
