--- a/carrier/mobile-ionic/src/pages/main/drive-to-warehouse/drive-to-warehouse.html
+++ b/carrier/mobile-ionic/src/pages/main/drive-to-warehouse/drive-to-warehouse.html
@@ -6,12 +6,11 @@
 		<span class="right-text">{{ carrierUserDistance + 'km' }}</span>
 	</div>
 	<div class="buttons">
-		<div class="button-bar" *ngIf="!workTaken">
-			<button
-				*ngIf="!selectedOrder?.isCancelled"
-				class="button button-brand"
-				(click)="takeWork()"
-			>
+		<div
+			class="button-bar"
+			*ngIf="!workTaken && !selectedOrder?.isCancelled"
+		>
+			<button class="button button-brand" (click)="takeWork()">
 				{{ 'DRIVE_TO_WAREHOUSE_VIEW.TAKE_WORK' | translate }}
 			</button>
 
@@ -34,6 +33,11 @@
 				(click)="cancelWork()"
 			>
 				{{ 'DRIVE_TO_WAREHOUSE_VIEW.CANCEL' | translate }}
+			</button>
+		</div>
+		<div class="button-bar" *ngIf="selectedOrder?.isCancelled">
+			<button class="button button-assertive" (click)="unselectOrder()">
+				{{ 'OK' | translate }}
 			</button>
 		</div>
 	</div>
