--- a/carrier/mobile-ionic/src/pages/main/delivery/delivery.html
+++ b/carrier/mobile-ionic/src/pages/main/delivery/delivery.html
@@ -1,11 +1,17 @@
-<div class="money-amount-container" *ngIf="!selectedOrder?.isPaid">
+<div
+	class="money-amount-container"
+	*ngIf="!selectedOrder?.isPaid && !selectedOrder?. isCancelled"
+>
 	<div class="money-amount">
 		{{ 'DELIVERY_VIEW.THE_CUSTOMER_HAS_TO_PAY' | translate }} ${{
 		selectedOrder?.totalPrice }}!
 	</div>
 </div>
 
-<div class="already-paid-container" *ngIf="selectedOrder?.isPaid">
+<div
+	class="already-paid-container"
+	*ngIf="selectedOrder?.isPaid && !selectedOrder?. isCancelled"
+>
 	<div class="already-paid">
 		{{ 'DELIVERY_VIEW.CUSTOMER_ALREADY_PAID_WITH_CARD' | translate }}
 	</div>
@@ -24,6 +30,7 @@
 	<div class="buttons">
 		<div class="button-bar">
 			<button
+				*ngIf="!selectedOrder?.isCancelled"
 				[disabled]="disabledButtons"
 				class="button button-brand"
 				(click)="delivered()"
@@ -36,7 +43,12 @@
 				class="button button-assertive"
 				(click)="cancel()"
 			>
-				{{ 'DELIVERY_VIEW.CANCEL' | translate }}
+				<span *ngIf="!selectedOrder?.isCancelled"
+					>{{ 'DELIVERY_VIEW.CANCEL' | translate }}</span
+				>
+				<span *ngIf="selectedOrder?.isCancelled"
+					>{{ 'OK' | translate }}</span
+				>
 			</button>
 		</div>
 	</div>
