--- a/carrier/mobile-ionic/src/pages/product/get-product/get-product.html
+++ b/carrier/mobile-ionic/src/pages/product/get-product/get-product.html
@@ -20,7 +20,7 @@
 			<span class="right-text">#{{ selectedOrder?.orderNumber }}</span>
 		</div>
 		<div class="buttons">
-			<div class="button-bar">
+			<div *ngIf="!selectedOrder?.isCancelled" class="button-bar">
 				<button
 					*ngIf="!selectedOrder?.isCancelled"
 					[disabled]="disabledButtons"
@@ -36,6 +36,15 @@
 					(click)="cancelWork()"
 				>
 					{{ 'GET_PRODUCT_VIEW.CANCEL' | translate }}
+				</button>
+			</div>
+
+			<div class="button-bar" *ngIf="selectedOrder?.isCancelled">
+				<button
+					class="button button-assertive"
+					(click)="unselectOrder()"
+				>
+					{{ 'OK' | translate }}
 				</button>
 			</div>
 		</div>
