--- a/carrier/mobile-ionic/src/pages/product/return-product/return-product.html
+++ b/carrier/mobile-ionic/src/pages/product/return-product/return-product.html
@@ -1,3 +1,10 @@
+<div *ngIf="selectedOrder?.isCancelled" class="money-amount-container">
+	<div class="money-amount">
+		<!-- TODO add translate -->
+		The customer cancel order
+	</div>
+</div>
+
 <div class="carrier-view">
 	<img
 		class="product-image"
