fix: fixed not working change language functionality

--- a/packages/merchant-tablet-ionic/src/pages/+language/language.html
+++ b/packages/merchant-tablet-ionic/src/pages/+language/language.html
@@ -26,8 +26,8 @@
 			>
 				<ion-select-option
 					*ngFor="let lang of translate?.getLangs()"
-					[value]="lang"
-					[selected]="lang === translate.currentLang"
+					value="{{lang}}"
+					selected="lang === translate.currentLang"
 				>
 					{{ lang }}
 				</ion-select-option>
