--- a/packages/merchant-tablet-ionic/src/pages/+promotions/promotion-table-page/promotion-table.html
+++ b/packages/merchant-tablet-ionic/src/pages/+promotions/promotion-table-page/promotion-table.html
@@ -1,6 +1,8 @@
 <div class="page-promotions">
 	<div id="header" class="bar bar-header bar-brand">
-		<h1 class="title">{{ 'CARRIERS_VIEW.PROMOTIONS' | translate }}</h1>
+		<h1 class="title">
+			{{ 'CARRIERS_VIEW.PROMOTIONS.PROMOTIONS' | translate }}
+		</h1>
 		<div class="buttons buttons-left header-item">
 			<span class="left-buttons">
 				<div class="waves-effect waves-classic">
