--- a/packages/carrier-mobile-ionic/src/pages/product/get-product/get-product.html
+++ b/packages/carrier-mobile-ionic/src/pages/product/get-product/get-product.html
@@ -5,56 +5,71 @@
 	</div>
 </div>
 
-<ion-content style="z-index: -1;" *ngIf="selectedProductImages">
-	<ion-slides pager="true">
-		<ion-slide
-			style="display: block; height: 100vh;"
-			*ngFor="let imageUrl of selectedProductImages"
-		>
-			<img src="{{imageUrl}}" />
-		</ion-slide>
-	</ion-slides>
-</ion-content>
-<div class="carrier-view">
-	<div class="bottom-container">
-		<div class="info">
-			<div
-				*ngFor="let title of selectedProductTitles"
-				style="padding-right: 5px;"
+<ion-app>
+	<ion-header class="bar-brand bar bar-header disable-user-behavior">
+		<h1 class="title" id="main-title">
+			<span>{{ 'MAIN_VIEW.EVERCO_DRIVER' | translate }}</span>
+		</h1>
+		<div class="buttons buttons-left header-item">
+			<span class="left-buttons">
+				<div class="waves-effect waves-classic">
+					<ion-menu-toggle class="button-icon">
+						<ion-icon ios="ios-menu" md="md-menu"></ion-icon>
+					</ion-menu-toggle>
+				</div>
+			</span>
+		</div>
+	</ion-header>
+	<ion-content fullscreen class="ion-padding" class="background-content">
+		<ion-slides>
+			<ion-slide
+				*ngFor="let imageUrl of selectedProductImages; let i = index"
 			>
-				<span class="left-info">{{title }}</span>
-				<span class="right-text">#{{selectedOrder.orderNumber}}</span>
-			</div>
-		</div>
+				<div class="slide">
+					<img src="{{imageUrl}}" />
+					<ion-text style="color: white;">
+						<h3>
+							{{selectedProductTitles[i]}}
+						</h3>
+						<span class="right-text"
+							>#{{selectedOrder?.orderNumber}}</span
+						>
+					</ion-text>
+				</div>
+			</ion-slide>
+		</ion-slides>
+	</ion-content>
+	<ion-row class="full-width">
+		<ion-col>
+			<div class="buttons">
+				<div *ngIf="!selectedOrder?.isCancelled" class="button-bar">
+					<button
+						*ngIf="!selectedOrder?.isCancelled"
+						[disabled]="disabledButtons"
+						class="button button-brand"
+						(click)="gotProduct()"
+					>
+						{{ 'GET_PRODUCT_VIEW.GOT_IT' | translate }}
+					</button>
 
-		<div class="buttons">
-			<div *ngIf="!selectedOrder?.isCancelled" class="button-bar">
-				<button
-					*ngIf="!selectedOrder?.isCancelled"
-					[disabled]="disabledButtons"
-					class="button button-brand"
-					(click)="gotProduct()"
-				>
-					{{ 'GET_PRODUCT_VIEW.GOT_IT' | translate }}
-				</button>
+					<button
+						[disabled]="disabledButtons"
+						class="button button-assertive"
+						(click)="cancelWork()"
+					>
+						{{ 'GET_PRODUCT_VIEW.CANCEL' | translate }}
+					</button>
+				</div>
 
-				<button
-					[disabled]="disabledButtons"
-					class="button button-assertive"
-					(click)="cancelWork()"
-				>
-					{{ 'GET_PRODUCT_VIEW.CANCEL' | translate }}
-				</button>
+				<div class="button-bar" *ngIf="selectedOrder?.isCancelled">
+					<button
+						class="button button-assertive"
+						(click)="unselectOrder()"
+					>
+						{{ 'OK' | translate }}
+					</button>
+				</div>
 			</div>
-
-			<div class="button-bar" *ngIf="selectedOrder?.isCancelled">
-				<button
-					class="button button-assertive"
-					(click)="unselectOrder()"
-				>
-					{{ 'OK' | translate }}
-				</button>
-			</div>
-		</div>
-	</div>
-</div>
+		</ion-col>
+	</ion-row>
+</ion-app>
