fix: added padding to description

--- a/packages/carrier-mobile-ionic/src/pages/product/get-product/get-product.html
+++ b/packages/carrier-mobile-ionic/src/pages/product/get-product/get-product.html
@@ -28,10 +28,10 @@
 				<div class="slide">
 					<img src="{{imageUrl}}" />
 					<ion-text style="color: white;">
-						<h3>
+						<h3 class="description">
 							{{selectedProductTitles[i]}}
 						</h3>
-						<span class="right-text"
+						<span class="description"
 							>#{{selectedOrder?.orderNumber}}</span
 						>
 					</ion-text>
