feat: #80 edit promotion

--- a/packages/merchant-tablet-ionic/src/pages/+promotions/promotion-mutation-popup/promotion-mutation.html
+++ b/packages/merchant-tablet-ionic/src/pages/+promotions/promotion-mutation-popup/promotion-mutation.html
@@ -45,7 +45,7 @@
 			</ion-button>
 			<ion-button
 				color="dark"
-				(click)="promotion? savePromotion() : createPromotion()"
+				(click)="savePromotion()"
 				[disabled]="!basicInfoForm.form.valid"
 			>
 				{{ 'CARRIERS_VIEW.PROMOTIONS.SAVE' | translate }}
