--- a/packages/merchant-tablet-ionic/src/pages/+promotions/promotion-table-page/promotion-table.html
+++ b/packages/merchant-tablet-ionic/src/pages/+promotions/promotion-table-page/promotion-table.html
@@ -38,7 +38,9 @@
 
 		<div *ngIf="showNoPromotionsIcon">
 			<div class="no-promotions-message">
-				<h2>{{ 'CARRIERS_VIEW.NO_PROMOTIONS' | translate }}</h2>
+				<h2>
+					{{ 'CARRIERS_VIEW.PROMOTIONS.NO_PROMOTIONS' | translate }}
+				</h2>
 			</div>
 		</div>
 	</div>
