fix: menu btn on the right throughout all pages

--- a/packages/carrier-mobile-ionic/src/pages/main/main.html
+++ b/packages/carrier-mobile-ionic/src/pages/main/main.html
@@ -1,10 +1,10 @@
 <ion-header class="bar-brand bar bar-header disable-user-behavior">
-	<h1 class="title" id="main-title">
+	<ion-title>
 		<!--
 			<img ng-if="sideMenuCtrl.titleImageSrc" ng-src="{{sideMenuCtrl.titleImageSrc}}" style="height: 15px;"/>
 		-->
-		<span>{{ 'MAIN_VIEW.EVERCO_DRIVER' | translate }}</span>
-	</h1>
+		{{ 'MAIN_VIEW.EVERCO_DRIVER' | translate }}
+	</ion-title>
 	<div class="buttons buttons-left header-item">
 		<span class="left-buttons">
 			<div class="waves-effect waves-classic">
