fix: build issue for "shop-mobile-ionic"

--- a/packages/merchant-tablet-ionic/src/pages/+carriers/add-carriers-popup/add-carriers-popup.html
+++ b/packages/merchant-tablet-ionic/src/pages/+carriers/add-carriers-popup/add-carriers-popup.html
@@ -7,8 +7,8 @@
 	</button>
 	<form-wizard #wizzardFrom [ngClass]="{ 'second-step': choicedNew }">
 		<wizard-step
-			#wizzardFromStep1
-			[isValid]="choiced"
+			#wizardFromStep1
+			[isValid]="choicedNew"
 			[title]="wizardStepsTitle.step1"
 		>
 			<add-choice #addChoice (click)="onStep1Next(choiced)"></add-choice>
