feat: french lang support | carrier-mobile-ionic

--- a/packages/carrier-mobile-ionic/src/pages/language/language.html
+++ b/packages/carrier-mobile-ionic/src/pages/language/language.html
@@ -22,9 +22,7 @@
 			</ion-item>
 
 			<ion-item>
-				<ion-label
-					>{{ 'LANGUAGE_VIEW.BULGARIAN' | translate }}</ion-label
-				>
+				<ion-label>{{ 'LANGUAGE_VIEW.BULGARIAN' | translate }}</ion-label>
 				<ion-radio value="bg-BG"></ion-radio>
 			</ion-item>
 
@@ -40,6 +38,10 @@
 			<ion-item>
 				<ion-label>{{ 'LANGUAGE_VIEW.SPANISH' | translate }}</ion-label>
 				<ion-radio value="es-ES"></ion-radio>
+			</ion-item>
+			<ion-item>
+				<ion-label>{{ 'LANGUAGE_VIEW.FRENCH' | translate }}</ion-label>
+				<ion-radio value="fr-FR"></ion-radio>
 			</ion-item>
 		</ion-radio-group>
 	</div>
